# Punchout

./: __init__.py  app.py  base.html  compresser.py  decompresser.py  index.html  products.json  punchout_test.xml  pyproject.toml  requirements.txt  sample_punchout.xml  test_punchout.py  views.py
templates/: base.html  cart.html  catalog.html  create_product.html  product_details.html
utils/: utils.py
views/: __init__.py  cart_routes.py  checkout_routes.py  main_routes.py  product_routes.py  punchout_message.py  punchout_routes.py  utils.py
